--- a/assets/css/galeria.css
+++ b/assets/css/galeria.css
@@ -7,7 +7,7 @@
     height: 60vh;
     min-height: 500px;
     background: linear-gradient(135deg, rgba(36, 38, 37, 0.85) 0%, rgba(36, 38, 37, 0.9) 100%), 
-                url('../img/portada.jpeg');
+                url('../img/herowebjj.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
