--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -397,7 +397,7 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: url('../img/herowebjj.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/herowebjj.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -577,7 +577,7 @@ html {
 
 /* === SECCIÓN QUIÉNES SOMOS - DISEÑO CORPORATIVO === */
 .about {
-    background: linear-gradient(rgba(36, 38, 37, 0.8), rgba(36, 38, 37, 0.8)), url('../img/nosotrosbg.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/nosotrosbg.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
